--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: python
 sudo: true
 python: 3.5
+notifications:
+  slack: metacell:5ALSeoP88DqIhORUJvxE56sq
 script:
   - sudo python setup.py
