--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 sudo: true
-python: 3.5
+python:
+  - "2.7"
+  - "3.5"
 notifications:
   slack: metacell:5ALSeoP88DqIhORUJvxE56sq
 script:
