--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: python
-sudo: true
 python:
   - "2.7"
   - "3.5"
+edge: true
 notifications:
   slack: metacell:5ALSeoP88DqIhORUJvxE56sq
 script:
