3rd attempt to fix travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ python:
 edge: true
 notifications:
   slack: metacell:5ALSeoP88DqIhORUJvxE56sq
+install:
+  - pip install --user -U pip
 script:
   - python install.py
