--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: python
-sudo: true
+sudo: false
 python:
   - "2.7"
   - "3.5"
 notifications:
   slack: metacell:5ALSeoP88DqIhORUJvxE56sq
 script:
-  - sudo python install.py
+  - python install.py
