--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ libs/__pycache__/
 libs/.ipynb_checkpoints/
 libs/GeppettoNeuron.log
 libs/models/__pycache__/
+libs/models/PTCell/mod/x86_64/*
 log.file
