--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
   global:
     secure: dn0FPQ5IG4M/3kdwnyI78ElQ308Vc3QnKAvkWfwMFb8QxDqxQdnTo7AV1qTMtbLrDNkeEWIgi4nc7jmXNtvGTwOfhAULVh6606Qs5B+ezTdwzajbbFMI8SKQx/pnTojOMu8dx7V4lMoR/YWcojR0VC1IWVC62TGbSB1k5BDGgH0=
 install:
+- git clone https://github.com/MetaCell/geppetto-neuron.git --quiet -b casper-tests
 - npm install --silent -g phantomjs 
 - npm install --silent -g casperjs 
 - npm install --silent -g slimerjs
@@ -39,3 +40,4 @@ script:
   - docker build -t="neuron-ui" --build-arg neuronuiBranch=$TRAVIS_BRANCH .
   - docker run  -t -dit --name=neuron-ui_container -h localhost -p 8888:8888 neuron-ui:latest
   - cd $TRAVIS_BUILD_DIR/ && ls
+  - cd geppetto-neuron && ls
