--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ script:
   - ls
   - cd tests
   - bash utilities/netpyne-server-status.sh
-  - sleep 30
+  - sleep 150
   - http_status=$(curl -s -I $1 http://localhost:8888/geppetto| grep HTTP/1.1 | awk {'print $2'})
   - echo "$http_status"
   - while [ "$http_status" == "404" ]; do
@@ -60,7 +60,7 @@ script:
       echo "$http_status";
     done;
   - "curl -s -I $1 http://localhost:8888/geppetto | grep HTTP/1.1 | awk {'print $2'}"
-  #- xvfb-run -a --server-args="-screen 0 1024x768x24"  casperjs test netpyne-tests.js --host=http://localhost:8888/ --engine=slimerjs
-  #- sudo docker cp netpyne-ui_container:/home/jovyan/work/nrn-7.4/src/nrnpython/NetPyNE-UI-casper-tests/netpyne-ui.log /etc;
-  #- tail /etc/netpyne-ui.log -n 200
-  #- cd $TRAVIS_BUILD_DIR/ && tail netpyne-ui.log -n 200
+  - xvfb-run -a --server-args="-screen 0 1024x768x24"  casperjs test netpyne-tests.js --host=http://localhost:8888/ --engine=slimerjs
+  - sudo docker cp netpyne-ui_container:/home/jovyan/work/nrn-7.4/src/nrnpython/NetPyNE-UI-casper-tests/npm-debug.log /etc;
+  - tail /etc/npm-debug.log -n 200
+  - cd $TRAVIS_BUILD_DIR/ && tail netpyne-ui.log -n 200
