--- a/.travis.yml
+++ b/.travis.yml
@@ -61,6 +61,8 @@ script:
     done;
   - "curl -s -I $1 http://localhost:8888/geppetto | grep HTTP/1.1 | awk {'print $2'}"
   - curl http://localhost:8888/api/sessions
+  - curl http://localhost:8888
+  - curl http://localhost:8888/geppetto
   - xvfb-run -a --server-args="-screen 0 1024x768x24"  casperjs test netpyne-tests.js --host=http://localhost:8888/ --engine=slimerjs
   - sudo docker cp netpyne-ui_container:/home/jovyan/work/nrn-7.4/src/nrnpython/NetPyNE-UI-casper-tests/npm-debug.log /etc;
   - tail /etc/npm-debug.log -n 200
