--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,6 @@ script:
   - curl http://localhost:8888
   - curl http://localhost:8888/geppetto
   - xvfb-run -a --server-args="-screen 0 1024x768x24"  casperjs test netpyne-tests.js --host=http://localhost:8888/ --engine=slimerjs
-  - sudo docker cp netpyne-ui_container:/home/jovyan/work/nrn-7.4/src/nrnpython/NetPyNE-UI-casper-tests/npm-debug.log /etc;
+  - sudo docker cp netpyne-ui_container:/home/jovyan/.local/share/jupyter/runtime/kernel-b1c01312-67e9-4936-8b1d-645abf3b6d7b.json /home/logs;
   - tail /etc/npm-debug.log -n 200
   - cd $TRAVIS_BUILD_DIR/ && tail netpyne-ui.log -n 200
