--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ script:
   - phantomjs -v
   - casperjs --version
   - docker build -t="netpyne-ui" --build-arg netpyneuiBranch=$TRAVIS_BRANCH .
-  - docker run  -t -dit --name=netpyne-ui_container -h localhost -p 8888:8888 netpyne-ui:latest
+  - docker run  -t -dit --name=netpyne-ui_container -h 127.0.0.1 -p 8888:8888 netpyne-ui:latest
   - cd $TRAVIS_BUILD_DIR/ && ls
   - cd geppetto-netpyne && ls
   - ls
