--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ script:
   - phantomjs -v
   - casperjs --version
   - docker build -t="netpyne-ui" --build-arg netpyneuiBranch=$TRAVIS_BRANCH .
-  - docker run  -t -dit --name=netpyne-ui_container -h 127.0.0.1 -p 8888:8888 netpyne-ui:latest
+  - docker run  -t -dit --name=netpyne-ui_container -h 127.0.0.1 -p 127.0.0.1:8888:8888 netpyne-ui:latest
   - cd $TRAVIS_BUILD_DIR/ && ls
   - cd geppetto-netpyne && ls
   - ls
@@ -67,7 +67,10 @@ script:
   - curl http://localhost:8888/api/sessions
   - curl http://localhost:8888
   - curl http://localhost:8888/geppetto
-  - xvfb-run -a --server-args="-screen 0 1024x768x24"  casperjs test netpyne-tests.js --host=http://localhost:8888/ --engine=slimerjs
+  - curl http://127.0.0.1:8888/api/sessions
+  - curl http://127.0.0.1:8888
+  - curl http://127.0.0.1:8888/geppetto
+  - xvfb-run -a --server-args="-screen 0 1024x768x24"  casperjs test netpyne-tests.js --host=http://127.0.0.1:8888/ --engine=slimerjs
   - firefox -v
   #- sudo docker cp netpyne-ui_container:/home/jovyan/.local/share/jupyter/runtime/kernel-b1c01312-67e9-4936-8b1d-645abf3b6d7b.json /home/logs;
   #- tail /etc/npm-debug.log -n 200
