--- a/.travis.yml
+++ b/.travis.yml
@@ -65,8 +65,8 @@ script:
     done;
   - "curl -s -I $1 http://localhost:8888/geppetto | grep HTTP/1.1 | awk {'print $2'}"
   - curl http://localhost:8888/api/sessions
-  - curl http://localhost:8888
-  - curl http://localhost:8888/geppetto
+  - curl http://docker.local:8888/
+  - curl http://docker.local:8888/geppetto
   - curl http://127.0.0.1:8888/api/sessions
   - curl http://127.0.0.1:8888
   - curl http://127.0.0.1:8888/geppetto
