Test 5 w/ travis_retry

--- a/.travis.yml
+++ b/.travis.yml
@@ -65,3 +65,5 @@ script:
   - firefox --version
   - travis_retry xvfb-run -a --server-args="-screen 0 1024x768x24"  casperjs test netpyne-tests.js --host=http://localhost:8888/ --engine=slimerjs
   - sudo docker logs -t netpyne-ui_container
+  - docker stop $(docker ps -a -q)
+  - docker rm $(docker ps -a -q)
