--- a/Dockerfile_dev
+++ b/Dockerfile_dev
@@ -1,6 +1,10 @@
 FROM jupyter/base-notebook:eb70bcf1a292
 USER root
 
+ARG netpyneuiBranch=0.2M3
+ENV netpyneuiBranch=${netpyneuiBranch}
+RUN echo "$netpyneuiBranch";
+
 RUN apt-get -qq update
 
 ARG NRN_VERSION="7.4"
@@ -33,13 +37,12 @@ RUN /bin/bash -c "source activate snakes && make --silent install"
 WORKDIR src/nrnpython
 ENV PATH="/home/jovyan/work/nrn-7.4/x86_64/bin:${PATH}"
 RUN /bin/bash -c "source activate snakes && python setup.py install"
-
-RUN /bin/bash -c "source activate snakes && pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple netpyne_ui"
-RUN /bin/bash -c "source activate snakes && jupyter nbextension install --py --user jupyter_geppetto"
-RUN /bin/bash -c "source activate snakes && jupyter nbextension enable --py jupyter_geppetto"
-RUN /bin/bash -c "source activate snakes && jupyter nbextension enable --py widgetsnbextension"
-RUN /bin/bash -c "source activate snakes &&  jupyter serverextension enable --py jupyter_geppetto"
-
+RUN wget https://github.com/MetaCell/NetPyNE-UI/archive/$netpyneuiBranch.zip
+RUN unzip $netpyneuiBranch.zip
+WORKDIR NetPyNE-UI-$netpyneuiBranch/utilities
+RUN /bin/bash -c "source activate snakes && python --version"
+RUN /bin/bash -c "source activate snakes && exec python install.py"
+RUN cd ../netpyne_ui/tests && /bin/bash -c "source activate snakes && python -m unittest netpyne_model_interpreter_test"
 RUN mkdir /home/jovyan/netpyne_workspace
 WORKDIR /home/jovyan/netpyne_workspace
 CMD /bin/bash -c "source activate snakes && exec jupyter notebook --debug --NotebookApp.default_url=/geppetto --NotebookApp.token=''"
