--- a/Dockerfile_dev
+++ b/Dockerfile_dev
@@ -1,10 +1,6 @@
 FROM jupyter/base-notebook:eb70bcf1a292
 USER root
 
-ARG netpyneuiBranch=0.2M3
-ENV netpyneuiBranch=${netpyneuiBranch}
-RUN echo "$netpyneuiBranch";
-
 RUN apt-get -qq update
 RUN apt-get install -y \
         locales \
@@ -37,15 +33,15 @@ RUN apt-get install -y \
 
 # Install latest iv and NEURON
 RUN git clone http://github.com/neuronsimulator/iv
-RUN git clone http://github.com/neuronsimulator/nrn
+RUN git clone --branch 7.6.1crxd https://github.com/adamjhn/nrn.git 
 WORKDIR iv
 RUN ./build.sh
-RUN ./configure
+RUN ./configure --prefix="/home/jovyan/work/iv/"
 RUN make --silent -j4
 RUN make --silent install -j4
 WORKDIR ../nrn
 RUN ./build.sh
-RUN ./configure --with-nrnpython=python2 --with-paranrn
+RUN ./configure --with-nrnpython=python2 --with-paranrn --prefix="/home/jovyan/work/nrn/" --with-iv="/home/jovyan/work/iv/"
 RUN make --silent -j4
 RUN make --silent install -j4
 
@@ -58,6 +54,8 @@ RUN conda create --name snakes python=2
 WORKDIR src/nrnpython
 ENV PATH="/home/jovyan/work/nrn/x86_64/bin:${PATH}"
 RUN /bin/bash -c "source activate snakes && python setup.py install"
+# Install Bokeh
+RUN /bin/bash -c "source activate snakes && conda install bokeh"
 
 # Clone NetPyNE-UI and install the development version
 WORKDIR ../../../
