--- a/Dockerfile_dev
+++ b/Dockerfile_dev
@@ -1,6 +1,10 @@
 FROM jupyter/base-notebook:eb70bcf1a292
 USER root
 
+ARG netpyneuiBranch=development	
+ENV netpyneuiBranch=${netpyneuiBranch}	
+RUN echo "$netpyneuiBranch";
+
 RUN apt-get -qq update
 RUN apt-get install -y \
         locales \
@@ -64,6 +68,7 @@ RUN unzip $netpyneuiBranch.zip
 WORKDIR NetPyNE-UI-$netpyneuiBranch/utilities
 RUN /bin/bash -c "source activate snakes && python --version"
 RUN /bin/bash -c "source activate snakes && exec python install.py"
-RUN mkdir /home/jovyan/netpyne_workspace
+WORKDIR /home/jovyan
+RUN git clone https://github.com/Neurosim-lab/netpyne_workspace
 WORKDIR /home/jovyan/netpyne_workspace
 CMD /bin/bash -c "source activate snakes && exec jupyter notebook --debug --NotebookApp.default_url=/geppetto --NotebookApp.token=''"
