--- a/Dockerfile_dev
+++ b/Dockerfile_dev
@@ -67,7 +67,7 @@ RUN wget https://github.com/MetaCell/NetPyNE-UI/archive/$netpyneuiBranch.zip
 RUN unzip $netpyneuiBranch.zip
 WORKDIR NetPyNE-UI-$netpyneuiBranch/utilities
 RUN /bin/bash -c "source activate snakes && python --version"
-RUN /bin/bash -c "source activate snakes && exec python install.py"
+RUN /bin/bash -c "source activate snakes && exec python install.py branch $netpyneuiBranch
 WORKDIR /home/jovyan
 RUN git clone https://github.com/Neurosim-lab/netpyne_workspace
 WORKDIR /home/jovyan/netpyne_workspace
