--- a/Dockerfile_dev
+++ b/Dockerfile_dev
@@ -13,7 +13,6 @@ RUN apt-get install -y \
         g++ \
         build-essential \
         libncurses-dev \
-        python2.7 \
         libpython-dev \
         cython \
         libx11-dev \
@@ -27,7 +26,6 @@ RUN apt-get install -y \
         python2.7-dev \
         xfonts-100dpi \ 
         libopenmpi-dev \
-        python2.7-scipy \
         make \
         zlib1g-dev \
         unzip \
@@ -38,22 +36,25 @@ RUN apt-get install -y \
 RUN git clone --branch 7.6.1crxd https://github.com/adamjhn/nrn.git
 WORKDIR nrn
 RUN ./build.sh
-RUN ./configure --without-x --with-nrnpython=python2 --without-paranrn --prefix="/home/jovyan/work/nrn/" --without-iv
+RUN ./configure --without-x --with-nrnpython=python3 --without-paranrn --prefix="/home/jovyan/work/nrn/" --without-iv
 RUN make --silent -j4
 RUN make --silent install -j4
 
-# Switch to non sudo, create a Python 2 virtual environment 
+# Switch to non sudo, create a Python 3 virtual environment 
 USER $NB_USER
 # Commenting out the conda update things broke!
 # RUN conda update conda
-RUN conda create --name snakes python=2
+# python 3 implies python 3.7 at this moment in time. Probably we want to specify exactly the version
+RUN conda create --name snakes python=3
 
 # Install NEURON python
 WORKDIR src/nrnpython
 ENV PATH="/home/jovyan/work/nrn/x86_64/bin:${PATH}"
 RUN /bin/bash -c "source activate snakes && python setup.py install"
 # Install Bokeh
+# I think this line breaks the previous conda installation
 RUN /bin/bash -c "source activate snakes && conda install bokeh=0.12.7"
+
 
 # Clone NetPyNE-UI and install the development version
 WORKDIR ../../../
