--- a/Dockerfile_dev
+++ b/Dockerfile_dev
@@ -23,7 +23,6 @@ RUN apt-get install -y \
         libtool \ 
         libxext-dev \
         libncurses-dev \
-        python2.7-dev \
         xfonts-100dpi \ 
         libopenmpi-dev \
         make \
@@ -32,14 +31,6 @@ RUN apt-get install -y \
         vim \
         libpng-dev
 
-# Install latest iv and NEURON
-RUN git clone --branch 7.6.1crxd https://github.com/adamjhn/nrn.git
-WORKDIR nrn
-RUN ./build.sh
-RUN ./configure --without-x --with-nrnpython=python3 --without-paranrn --prefix="/home/jovyan/work/nrn/" --without-iv
-RUN make --silent -j4
-RUN make --silent install -j4
-
 # Switch to non sudo, create a Python 3 virtual environment 
 USER $NB_USER
 # Commenting out the conda update things broke!
@@ -47,13 +38,23 @@ USER $NB_USER
 # python 3 implies python 3.7 at this moment in time. Probably we want to specify exactly the version
 RUN conda create --name snakes python=3.7
 
+# Install latest iv and NEURON
+RUN git clone --branch 7.6.1crxd https://github.com/adamjhn/nrn.git
+WORKDIR nrn
+RUN ./build.sh
+# We need to activate so we get the right python version
+RUN /bin/bash -c "source activate snakes && ./configure --without-x --with-nrnpython=python3 --without-paranrn --prefix='/home/jovyan/work/nrn/' --without-iv"
+RUN make --silent -j4
+RUN make --silent install -j4
+
+
 # Install NEURON python
 WORKDIR src/nrnpython
 ENV PATH="/home/jovyan/work/nrn/x86_64/bin:${PATH}"
 RUN /bin/bash -c "source activate snakes && python setup.py install"
 # Install Bokeh
 # I think this line breaks the previous conda installation
-RUN /bin/bash -c "source activate snakes && conda install bokeh=0.12.7"
+# RUN /bin/bash -c "source activate snakes && conda install bokeh=0.12.7"
 
 
 # Clone NetPyNE-UI and install the development version
