--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ node_js:
 env:
   global:
     secure: dn0FPQ5IG4M/3kdwnyI78ElQ308Vc3QnKAvkWfwMFb8QxDqxQdnTo7AV1qTMtbLrDNkeEWIgi4nc7jmXNtvGTwOfhAULVh6606Qs5B+ezTdwzajbbFMI8SKQx/pnTojOMu8dx7V4lMoR/YWcojR0VC1IWVC62TGbSB1k5BDGgH0=
+before_install:
+- python -c "import fcntl; fcntl.fcntl(1, fcntl.F_SETFL, 0)"
 install:
 - git clone --quiet  https://github.com/MetaCell/geppetto-netpyne.git
 - cd geppetto-netpyne
@@ -68,6 +70,5 @@ script:
   - firefox --version
   - travis_retry xvfb-run -a --server-args="-screen 0 1024x768x24"  casperjs test netpyne-tests.js --host=http://localhost:8888/ --engine=slimerjs
   - docker logs -t netpyne-ui_container
-  - sleep 10
   - docker stop $(docker ps -a -q)
   - docker rm $(docker ps -a -q)
