--- a/Dockerfile_dev
+++ b/Dockerfile_dev
@@ -1,63 +1,17 @@
-FROM jupyter/base-notebook:eb70bcf1a292
-USER root
+FROM metacell/jupyter-neuron
+USER $NB_USER
 
 ARG netpyneuiBranch=development 
 ENV netpyneuiBranch=${netpyneuiBranch}  
 RUN echo "$netpyneuiBranch";
 
-RUN apt-get -qq update
-RUN apt-get install -y \
-        locales \
-        wget \
-        gcc \
-        g++ \
-        build-essential \
-        libncurses-dev \
-        libpython-dev \
-        cython \
-        libx11-dev \
-        git \
-        bison \
-        flex \
-        automake \ 
-        libtool \ 
-        libxext-dev \
-        libncurses-dev \
-        xfonts-100dpi \ 
-        libopenmpi-dev \
-        make \
-        zlib1g-dev \
-        unzip \
-        vim \
-        libpng-dev
-
-# Switch to non sudo, create a Python 3 virtual environment 
-USER $NB_USER
-RUN conda create --name snakes python=3.7
-
-# Install latest iv and NEURON
-RUN git clone --branch 7.6.2 https://github.com/neuronsimulator/nrn
-WORKDIR nrn
-RUN ./build.sh
-# Activate conda to configure nrn with the right python version
-RUN /bin/bash -c "source activate snakes && ./configure --without-x --with-nrnpython=python3 --without-paranrn --prefix='/home/jovyan/work/nrn/' --without-iv"
-RUN make --silent -j4
-RUN make --silent install -j4
-
-
-# Install NEURON python
-WORKDIR src/nrnpython
-ENV PATH="/home/jovyan/work/nrn/x86_64/bin:${PATH}"
-RUN /bin/bash -c "source activate snakes && python setup.py install"
-
 # Clone NetPyNE-UI and install the development version
-WORKDIR ../../../
-RUN wget https://github.com/MetaCell/NetPyNE-UI/archive/$netpyneuiBranch.zip
+RUN wget https://github.com/MetaCell/NetPyNE-UI/archive/$netpyneuiBranch.zip -q
 RUN unzip $netpyneuiBranch.zip
-WORKDIR NetPyNE-UI-$netpyneuiBranch/utilities
+WORKDIR /home/jovyan/work/NetPyNE-UI-$netpyneuiBranch/utilities
 RUN /bin/bash -c "source activate snakes && python --version"
 RUN /bin/bash -c "source activate snakes && exec python install.py branch $netpyneuiBranch"
-WORKDIR /home/jovyan
+WORKDIR /home/jovyan/work
 RUN git clone https://github.com/Neurosim-lab/netpyne_workspace
-WORKDIR /home/jovyan/netpyne_workspace
+WORKDIR /home/jovyan/work/NetPyNE-UI-$netpyneuiBranch
 CMD /bin/bash -c "source activate snakes && exec jupyter notebook --debug --NotebookApp.default_url=/geppetto --NotebookApp.token='' --library=netpyne_ui"
