--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,26 @@ addons:
     - libgl1-mesa-dri
     - libglapi-mesa
     - libosmesa6
+    - python-tk
+    - python-sympy
     - python-tables 
+    - locales 
+    - wget 
+    - gcc 
+    - g++ 
+    - build-essential 
+    - libncurses-dev 
+    - libpython-dev 
+    - cython 
+    - libx11-dev 
+    - git 
+    - flex 
+    - automake  
+    - libtool  
+    - libxext-dev 
+    - libncurses-dev 
+    - make 
+
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
