cleaning up jupyter hub

--- a/jupyterhub/Dockerfile_hub_backup
+++ b/jupyterhub/Dockerfile_hub_backup
@@ -1,11 +1,9 @@
 FROM metacell/jupyter-neuron:latest
 
 USER root
-RUN apt-get install -y \
-        nodejs \
-        npm
-RUN npm install -g configurable-http-proxy
-
+# RUN apt-get install -y nodejs
+# RUN npm install -g configurable-http-proxy
+RUN conda install -c conda-forge nodejs configurable-http-proxy
 
 USER $NB_USER
 
@@ -15,7 +13,7 @@ ENV netpyneuiBranch=${netpyneuiBranch}
 RUN echo "$netpyneuiBranch";
 
 ARG INCUBATOR_VER=unknown
-RUN /bin/bash -c "INCUBATOR_VER=${INCUBATOR_VER} source activate snakes && pip install jupyterhub"
+RUN /bin/bash -c "INCUBATOR_VER=${INCUBATOR_VER} source activate snakes && pip install jupyterhub==0.9.4 jupyterhub-tmpauthenticator dockerspawner"
 
 # Clone NetPyNE-UI and install the development version
 RUN wget https://github.com/MetaCell/NetPyNE-UI/archive/$netpyneuiBranch.zip -q
@@ -29,12 +27,13 @@ WORKDIR /home/jovyan/netpyne_workspace
 RUN ln -sfn /home/jovyan/work/NetPyNE-UI-$netpyneuiBranch/netpyne_ui/tests tests
 
 # Copy jupyterhub_config
-RUN cp /home/jovyan/work/NetPyNE-UI-$netpyneuiBranch/jupyterhub_config .
-
-#CMD /bin/bash -c "source activate snakes && exec jupyter notebook --debug --NotebookApp.default_url=/geppetto --NotebookApp.token='' --library=netpyne_ui"
+RUN cp /home/jovyan/work/NetPyNE-UI-$netpyneuiBranch/jupyterhub_config.py .
 
 # we need to set up a password for jovyan or root user
 CMD /bin/bash -c "source activate snakes && exec jupyterhub"
+
+
+
 
 
 
