remove unused comments and commands

--- a/jupyterhub/Dockerfile_hub
+++ b/jupyterhub/Dockerfile_hub
@@ -5,6 +5,8 @@ ARG netpyneuiBranch=feature_jupyterhub
 ENV netpyneuiBranch=${netpyneuiBranch}  
 RUN echo "$netpyneuiBranch";
 
-RUN pip install jupyterhub-tmpauthenticator dockerspawner
+# Install authenticator and spawner + jupyter_client
+RUN pip install jupyterhub-tmpauthenticator dockerspawner jupyter_client
 
+# Overwrite jupyterhub_config
 RUN wget https://raw.githubusercontent.com/MetaCell/NetPyNE-UI/$netpyneuiBranch/jupyterhub/jupyterhub_config.py -q
