--- a/Dockerfile_dev
+++ b/Dockerfile_dev
@@ -5,14 +5,19 @@ ARG netpyneuiBranch=development
 ENV netpyneuiBranch=${netpyneuiBranch}  
 RUN echo "$netpyneuiBranch";
 
-# Clone NetPyNE-UI and install the development version
-RUN wget https://github.com/MetaCell/NetPyNE-UI/archive/$netpyneuiBranch.zip -q
-RUN unzip $netpyneuiBranch.zip
-WORKDIR /home/jovyan/work/NetPyNE-UI-$netpyneuiBranch/utilities
+ENV FOLDER=NetPyNE-UI
+WORKDIR /home/jovyan/work
+
+COPY --chown=1000:1000 . NetPyNE-UI
+WORKDIR ${FOLDER}/utilities
+
 RUN /bin/bash -c "source activate snakes && python --version"
 RUN /bin/bash -c "source activate snakes && exec python install.py branch $netpyneuiBranch"
+
 WORKDIR /home/jovyan
+
 RUN git clone https://github.com/Neurosim-lab/netpyne_workspace
 WORKDIR /home/jovyan/netpyne_workspace
-RUN ln -sfn /home/jovyan/work/NetPyNE-UI-$netpyneuiBranch/netpyne_ui/tests tests
-CMD /bin/bash -c "source activate snakes && exec jupyter notebook --debug --NotebookApp.default_url=/geppetto --NotebookApp.token='' --library=netpyne_ui"
+
+RUN ln -sfn /home/jovyan/work/NetPyNE-UI/netpyne_ui/tests tests
+CMD /bin/bash -c "source activate snakes && exec jupyter notebook --debug --NotebookApp.default_url=/geppetto --NotebookApp.token='' --library=netpyne_ui --NotebookApp.disable_check_xsrf=True"
