--- a/Dockerfile_dev
+++ b/Dockerfile_dev
@@ -1,4 +1,5 @@
-FROM metacell/jupyter-neuron:latest
+# FROM metacell/jupyter-neuron:latest
+FROM frodriguez4600/jupyter-neuron:latest
 USER $NB_USER
 
 ARG netpyneuiBranch=development 
@@ -11,13 +12,12 @@ WORKDIR /home/jovyan/work
 COPY --chown=1000:1000 . NetPyNE-UI
 WORKDIR ${FOLDER}/utilities
 
-RUN /bin/bash -c "source activate snakes && python --version"
-RUN /bin/bash -c "source activate snakes && exec python install.py branch $netpyneuiBranch"
+RUN python install.py branch $netpyneuiBranch
 
-WORKDIR /home/jovyan
+WORKDIR /home/jovyan/work/NetPyNE-UI
 
-RUN git clone https://github.com/Neurosim-lab/netpyne_workspace
-WORKDIR /home/jovyan/netpyne_workspace
+RUN git clone https://github.com/Neurosim-lab/netpyne_workspace && rm -rf netpyne_workspace/.git
+WORKDIR /home/jovyan/work/NetPyNE-UI/netpyne_workspace
 
-RUN ln -sfn /home/jovyan/work/NetPyNE-UI/netpyne_ui/tests tests
-CMD /bin/bash -c "source activate snakes && exec jupyter notebook --debug --NotebookApp.default_url=/geppetto --NotebookApp.token='' --library=netpyne_ui --NotebookApp.disable_check_xsrf=True"
+RUN ln -sfn /home/jovyan/work/NetPyNE-UI/netpyne_ui/tests ../tests
+CMD /bin/bash -c "cd .. && NetPyNE-UI"
