--- a/k8s/cf.yaml
+++ b/k8s/cf.yaml
@@ -122,7 +122,7 @@ steps:
     stage: deploy
     environment:
       - CHART_NAME=jupyterhub
-      - RELEASE_NAME={{RELEASE_NAME}}
+      - RELEASE_NAME=${{RELEASE_NAME}}
       - KUBE_CONTEXT=geppetto-cluster@metacellllc
       - NAMESPACE=netpyne
       - TILLER_NAMESPACE=kube-system
