--- a/k8s/cf.yaml
+++ b/k8s/cf.yaml
@@ -77,7 +77,7 @@ steps:
               c.Spawner.default_url = '/geppetto'
               c.Spawner.debug = True
             spawner: >-
-              c.Spawner.args = ["--library=netpyne_ui"]
+              c.Spawner.args = ["--library=netpyne_ui", "--NotebookApp.disable_check_xsrf=True"]
     
         scheduling:
           userScheduler:
@@ -117,7 +117,7 @@ steps:
     
         debug:
           enabled: false
-    image: 'codefresh/cfstep-helm:2.12.1'
+    image: 'codefresh/cfstep-helm:2.12.2'
     title: Installing chart
     stage: deploy
     environment:
