--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -24,7 +24,7 @@ hub:
       c.Spawner.default_url = '/geppetto'
       c.Spawner.debug = True
     spawner: >-
-      c.Spawner.args = ["--library=netpyne_ui"]
+      c.Spawner.args = ["--library=netpyne_ui", "--NotebookApp.disable_check_xsrf=True"]
 
 scheduling:
   userScheduler:
