--- a/k8s/cf.yaml
+++ b/k8s/cf.yaml
@@ -123,7 +123,7 @@ steps:
     environment:
       - CHART_NAME=jupyterhub
       - RELEASE_NAME=${{RELEASE_NAME}}
-      - KUBE_CONTEXT=geppetto-cluster@metacellllc
+      - KUBE_CONTEXT=${{CLUSTER_NAME}}
       - NAMESPACE=${{NAMESPACE}}
       - TILLER_NAMESPACE=kube-system
       - CHART_VERSION=0.9.0-beta.4
