--- a/webapp/package.json
+++ b/webapp/package.json
@@ -21,6 +21,7 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@geppettoengine/geppetto-client": "file:./geppetto-client",
     "@material-ui/icons": "^4.9.1",
+    "less-vars-to-js": "^1.3.0",
     "@material-ui/lab": "^4.0.0-alpha.51",
     "react-redux": "^7.2.0"
   },
