#152 Use public gcp registry

--- a/k8s/cf_pipeline.yaml
+++ b/k8s/cf_pipeline.yaml
@@ -61,3 +61,4 @@ steps:
       custom_values:
         - 'hub_image_tag=${{CF_SHORT_REVISION}}'
         - 'singleuser_image_tag=${{CF_SHORT_REVISION}}'
+        - 'proxy_secretToken=${{SECRET_TOKEN}}'
