--- a/k8s/minikube_values.yaml
+++ b/k8s/minikube_values.yaml
@@ -1,8 +1,8 @@
 # Use with minikubes
 hub:
   image: 
-    name: us.gcr.io/metacellllc/netpyne-hub
-    tag: adf2cea
+    name: netpy-hub
+    tag: 'latest'
     pullPolicy: IfNotPresent
 
   resources:
@@ -43,8 +43,8 @@ singleuser:
   memory:
     guarantee: 0.2G
   image:
-    name: us.gcr.io/metacellllc/netpyne-ui
-    tag: 'adf2cea'
+    name: netpy
+    tag: 'latest'
     pullPolicy: IfNotPresent
 
 cull:
