#152 Use temporary tag for neuron base image

--- a/Dockerfile_dev
+++ b/Dockerfile_dev
@@ -1,4 +1,5 @@
-FROM metacell/jupyter-neuron:nrn-v7.8.0
+FROM frodriguez4600/jupyter-neuron:nrn-v7.8.0
+#FROM metacell/jupyter-neuron:nrn-v7.8.0
 USER $NB_USER
 
 ARG branch=development 
