#152 Use metacell docker image for jupyter-neuron

--- a/Dockerfile_dev
+++ b/Dockerfile_dev
@@ -1,5 +1,4 @@
-FROM frodriguez4600/jupyter-neuron:nrn-v7.8.0
-#FROM metacell/jupyter-neuron:nrn-v7.8.0
+FROM metacell/jupyter-neuron:nrn-v7.8.0
 USER $NB_USER
 
 ARG branch=development 
