--- a/webapp/package.json
+++ b/webapp/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@geppettoengine/geppetto-client": "file:./geppetto-client",
+    "@geppettoengine/geppetto-client": "openworm/geppetto-client#v2.4.0",
     "@material-ui/icons": "^4.9.1",
     "less-vars-to-js": "^1.3.0",
     "@material-ui/lab": "^4.0.0-alpha.51",
