Small graphical improvements

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,7 +14,7 @@
     "build-dev-noTest": "webpack --mode none --devtool source-map --env.noTest=true",
     "prebuild-dev-noTest:watch": "eslint . --color --fix",
     "build-dev-noTest:watch": "webpack --mode none --devtool source-map --env.noTest=true --progress --watch",
-    "prestart": "eslint . --color",
+    "prestart": "eslint . --color --fix",
     "start": "node --max_old_space_size=2048 node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress  --config webpack.config.dev.js"
   },
   "dependencies": {
