--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,100 @@
+airspeed==0.5.4dev-20150515
+alembic==1.4.2
+async-generator==1.10
+attrs==19.3.0
+blinker==1.4
+bokeh==2.1.0
+brotlipy==0.7.0
+cachetools==0.8.0
+certifi==2020.4.5.2
+certipy==0.1.3
+cffi==1.14.0
+chardet==3.0.4
+conda==4.8.2
+conda-package-handling==1.6.0
+cryptography==2.9.2
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
+Deprecated==1.2.10
+entrypoints==0.3
 future==0.18.2
-numpy==1.18.5
-scipy==1.4.1
-matplotlib===2.2.4
-matplotlib-scalebar==0.6.2
-NEURON==7.8.0.127
-pandas==0.23.4
-pyneuroml==0.3.15
-bokeh===2.1.0
+idna==2.9
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jedi==0.17.0
+Jinja2==2.11.2
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.3
+jupyter-console==6.1.0
+jupyter-core==4.6.3
+jupyter_geppetto==1.1.1
+jupyter-telemetry==0.0.5
+jupyterhub==1.1.0
+jupyterlab==2.1.3
 jupyterthemes==0.20.0
+kiwisolver==1.2.0
+lesscpy==0.14.0
+libNeuroML==0.2.50
+lxml==4.5.1
+Mako==1.1.0
+MarkupSafe==1.1.1
+matplotlib==2.2.4
+matplotlib-scalebar==0.6.2
+mistune==0.8.4
+multimethod==1.3
+nbconvert==5.6.1
+nbformat==5.0.6
+netpyne==0.9.6
+neuromllite==0.1.9
+NEURON==7.8.0.127
+numpy==1.18.5
+oauthlib==3.0.1
+ordered-set==4.0.2
+pamela==1.0.0
+pandas==0.23.4
+pandocfilters==1.4.2
+parso==0.7.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.2.0
+ply==3.11
+prompt-toolkit==3.0.5
+ptyprocess==0.6.0
+pycosat==0.6.3
+pycparser==2.20
+pycurl==7.43.0.5
+pyecore==0.11.7
+pygeppetto==0.8.1
+Pygments==2.6.1
+PyJWT==1.7.1
+PyLEMS==0.4.9.3
+pyNeuroML==0.3.15
+pyOpenSSL==19.1.0
+pyparsing==2.4.7
+pyrsistent==0.16.0
+PySocks==1.7.1
+python-dateutil==2.8.1
+python-editor==1.0.4
+python-json-logger==0.1.11
+pytz==2020.1
+PyYAML==5.3.1
+pyzmq==19.0.1
+qtconsole==4.7.5
+QtPy==1.9.0
+RestrictedPython==5.0
+ruamel-yaml==0.15.80
+ruamel.yaml.clib==0.2.0
+scipy==1.4.1
+Send2Trash==1.5.0
+terminado==0.8.3
+testpath==0.4.4
+tornado==6.0.4
+traitlets==4.3.3
+typing-extensions==3.7.4.2
+urllib3==1.25.9
+webencodings==0.5.1
+widgetsnbextension==3.5.1
+wrapt==1.12.1
+zipp==3.1.0
